# firmdot

./: .gitignore  .gitmodules  CMakeLists.txt
src/: ApplicationConfig.hpp  BinaryUtility.hpp  FlipDotMatrix.hpp  HWConfig.hpp  main.cpp  package.hpp
